<resources>
    <string name="app_name">WppClone</string>
    <string name="botaoCadastrar">Cadastrar</string>
    <string name="botaoValidar">Validar</string>
    <string name="textoValidacao">Você recebebeu um SMS para validação do seu número, digite o código de validação abaixo:</string>
    <string name="hintNome">Digite seu Nome</string>
    <string name="hintDdi">+55</string>
    <string name="hintDdd">51</string>
    <string name="hintNumero">Seu Numero</string>
    <string name="hintCodigo">Digite o Codigo recebido</string>
    <string name="tituloValidacao">Validação</string>
    <string name="activityLogin">Login</string>
    <string name="activityValidacao">Validação</string>
</resources>