<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="br.com.estudoandroid.wppclone.Validador">

    <ImageView
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo"
        android:layout_width="@dimen/wLogoLogin"
        android:layout_height="@dimen/hLogoLogin"
        android:layout_marginTop="@dimen/margem20"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="67dp"
        android:layout_marginEnd="67dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginLeft="67dp"
        android:layout_marginRight="67dp"
        android:id="@+id/imageView" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/margem20"
        android:layout_marginRight="@dimen/margem20"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="@dimen/margem20"
        android:layout_marginEnd="@dimen/margem20"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:layout_constraintLeft_creator="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tituloValidacao"
            android:textAlignment="center"
            android:textColor="@color/textPrimaryColor"
            android:textSize="@dimen/textoTitulos"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textoValidacao"
            android:textColor="@color/textPrimaryColor" />

        <EditText
            android:id="@+id/codigoId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margem20"
            android:inputType="number"
            android:textAlignment="center"
            android:textColorHint="@color/textPrimaryColor"
            android:hint="@string/hintCodigo"
            android:textColor="@color/textPrimaryColor" />

        <Button
            android:id="@+id/botaoValidar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margem20"
            android:background="@color/colorPrimaryDark"
            android:text="@string/botaoValidar"
            android:textColor="@color/textPrimaryColor"
            android:textStyle="bold" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
