<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.estudoandroid.wppclone.Login"
    android:background="@color/colorPrimary">

    <ImageView
        android:src="@drawable/logo"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_marginTop="@dimen/margem20"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="67dp"
        android:layout_marginEnd="67dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginLeft="67dp"
        android:layout_marginRight="67dp"
        android:id="@+id/imageView"
        android:contentDescription="@string/app_name" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_margin="@dimen/margem20"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <EditText
            android:id="@+id/editNome"
            android:layout_width="match_parent"
            android:textColor="@color/textPrimaryColor"
            android:layout_height="wrap_content"
            android:hint="@string/hintNome" />

        <LinearLayout
            android:layout_marginTop="@dimen/margem20"
            android:layout_marginBottom="@dimen/margem20"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height50dp">


            <EditText
                android:id="@+id/ddi"
                android:hint="@string/hintDdi"
                android:inputType="number"
                android:textColor="@color/textPrimaryColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/numeroId"
                android:hint="@string/hintNumero"
                android:inputType="number"
                android:textColor="@color/textPrimaryColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <Button
            android:id="@+id/botaoCadastrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/textPrimaryColor"
            android:background="@color/colorPrimaryDark"
            android:text="@string/botaoCadastrar" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
